@@ -258,3 +258,5 @@ https://news.ebc.net.tw/news/living/220265
 https://www.mdnkids.com/news/?Serial_NO=117373
 http://m.news.cctv.com/2020/08/03/ARTIF6MCdGHVjzLTTAVM3lEO200803.shtml
 http://m.news.cctv.com/2020/08/05/ARTInbk85I3vDnWHYgPfvcJd200805.shtml
+https://newnet.tw/Newsletter/comment.aspx?Iinfo=5&iNumber=30309
+https://newnet.tw/Newsletter/news.aspx?Iinfo=4&iNumber=28293
