@@ -1,4 +1,5 @@
   - Add a site-specific extractor for m.news.cctv.com
+  - Improve the extractor of newnet.tw
 
 v0.35.0 2020-07-31T08:36:15+0800
   - re-format the dateline extracted from www.thinkingtaiwan.com
